Added Redirection URL's

--- a/vehicleusers/templates/registration/login.html
+++ b/vehicleusers/templates/registration/login.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Login to your Leave Application</title>
+    <title>Login to Smart Road Portal</title>
 </head>
 <body>
 {% block content %}
