--- a/vehicleusers/templates/vehicleusers/myprofile.html
+++ b/vehicleusers/templates/vehicleusers/myprofile.html
@@ -12,7 +12,7 @@ table, th,td {
     <title>Title</title>
 </head>
 <body>
-
+{% if er %}
 <p>
     Your Aadhar Id:
     {{ adhar }}
@@ -64,6 +64,11 @@ Your Fine Details:
     </tr>
 
 </table>
+    {% if acc %}
+        <h1><a href="{% url 'onroad' %}"> Click here to proceed</a></h1>{% endif %}
 <a href="{% url 'logout' %}"> Click Here to logout></a>
+{% else %}
+<h1>Your are not logged in</h1>
+<a href="{% url 'login' %}"> Click Here to login></a>{% endif %}
 </body>
 </html>
