--- a/templates/onroad/postchecking.html
+++ b/templates/onroad/postchecking.html
@@ -13,5 +13,11 @@ Your License Status:
 Your Vehicle Status:
 {{ vehicle }}
 </p>
+<p>
+    Driver Fine added: {{ fine }}
+</p>
+<a>
+    <a href="{% url "onroad" %}">NEXT DRIVER</a></p>
+</p>
 </body>
 </html>
