--- a/vehicleusers/templates/vehicleusers/myprofile.html
+++ b/vehicleusers/templates/vehicleusers/myprofile.html
@@ -65,7 +65,7 @@ Your Fine Details:
 
 </table>
     {% if acc %}
-        <h1><a href="{% url 'onroad' %}"> Click here to proceed</a></h1>{% endif %}
+        <h1><a href="{% url 'onroad' %}"> START CHECKING</a></h1>{% endif %}
 <a href="{% url 'logout' %}"> Click Here to logout></a>
 {% else %}
 <h1>Your are not logged in</h1>
