Added Fine Reason Field and Mail Configs

--- a/vehicleusers/templates/vehicleusers/myprofile.html
+++ b/vehicleusers/templates/vehicleusers/myprofile.html
@@ -9,7 +9,7 @@ table, th,td {
 </style>
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>My Profile</title>
 </head>
 <body>
 {% if er %}
