--- a/vehicleusers/templates/vehicleusers/updatevehicle.html
+++ b/vehicleusers/templates/vehicleusers/updatevehicle.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Vehicle Additin</title>
 </head>
 <bodystyle="color:green ;">
 <p style="font-size:20px">
