--- a/templates/onroad/checking.html
+++ b/templates/onroad/checking.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Live Checking</title>
 </head>
 <body style="color:green ;">
 <p style="font-size:20px">
