--- a/vehicleusers/templates/vehicleusers/updateprofile.html
+++ b/vehicleusers/templates/vehicleusers/updateprofile.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Profile Updation</title>
 </head>
 <body style="color:green ;">
 <p style="font-size:20px">
