--- a/vehicleusers/templates/registration/login.html
+++ b/vehicleusers/templates/registration/login.html
@@ -1,15 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Login to Smart Road Portal</title>
-</head>
-<body>
-{% block content %}
-    {% if form.errors %}
-        <p>Your username and password didn't match. Please try again.</p>
-    {% endif %}
+<html lang="en" >
 
+<head>
+  <meta charset="UTF-8">
+  <title>Login Form</title>
+  
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
+
+  <link rel='stylesheet prefetch' href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700,900|RobotoDraft:400,100,300,500,700,900'>
+<link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css'>
+{% load static %}
+      <link rel="stylesheet" type="text/css" href="{% static 'registration/css/style.css' %}" />
+
+  
+</head>
+
+<body>
+
+  
+<!-- Form Mixin-->
+<!-- Input Mixin-->
+<!-- Button Mixin-->
+<!-- Pen Title-->
+<div class="pen-title">
+  <h1>Login Here</h1>
+</div>
+<!-- Form Module-->
+<div class="module form-module">
+  <div class="toggle"><i class="fa fa-times fa-pencil"></i>
+
+  </div>
+  <div class="form">
+    <h2>Login to your account</h2>
     <form method="post" action="{% url 'login' %}">
     {% csrf_token %}
         <table>
@@ -23,9 +45,12 @@
         </tr>
         </table>
 
-        <input type="submit" value="login" />
-        <input type="hidden" name="next" value="{{ next }}" />
+
+            <button type="submit"  id="login-button">Login</button>
+            <input type="hidden" name="next" value="{{ next }}" />
     </form>
-{% endblock %}
+  </div>
+
 </body>
+
 </html>
