Added Frontend pages

--- a/onroad/templates/onroad/postchecking.html
+++ b/onroad/templates/onroad/postchecking.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en">{% load static %}
+<link rel="stylesheet" type="text/css" href="{% static 'vehicleusers/style.css' %}" />
+
 <head>
     <meta charset="UTF-8">
     <title>Checking Results</title>
