--- a/vehicleusers/templates/vehicleusers/home.html
+++ b/vehicleusers/templates/vehicleusers/home.html
@@ -23,7 +23,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<h1>SMART INDIA</h1>
+				<h1 style="">SANDY MAAA</h1>
 				<nav id="nav">
 					<ul>
 						<li><a href="home.html">Home</a></li>
