--- a/onroad/templates/onroad/checking.html
+++ b/onroad/templates/onroad/checking.html
@@ -1,26 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+{#{% load static %}#}
+{#<link rel="stylesheet" type="text/css" href="{% static 'vehicleusers/style.css' %}" />#}
+{#<link rel="stylesheet" type="text/css" href="{% static 'registration/style.css' %}" />#}
+
 <head>
     <meta charset="UTF-8">
     <title>Live Checking</title>
 </head>
-<body style="color:green ;">
+<body>
 <p style="font-size:20px">
 Please Enter Driver Details Here
 </p>
 <form  method="post"  >
 
  		{% csrf_token %}
-        {{ form.as_p}}
+
+         {{ form.as_p}}
+
 
  		<input type="submit" name='create' value="Verify" >
     	</form>
 
-<ul class="messages">
-    {% for message in messages %}
-    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-    {% endfor %}
-</ul>
 <a href="{% url 'logout' %}"> Click Here to logout></a>
 
 </body>
